tests/samples/invalid/invalid_escape_unclosed.pn
fn foo()
{
	var x = "Is \u{20ac a valid escape?";
}
